--- a/action.yml
+++ b/action.yml
@@ -9,9 +9,6 @@ inputs:
     description: What number of errors should make this check fail?
     default: 0
     type: number
-  docker_image:
-    description: "What docker image should be used to run these checks?"
-    default: jhudsl/course_template:main
-    type: string
 runs:
-  using: 'composite'
+  using: 'docker'
+  image: 'docker://jhudsl/course_template
