Not seeing a syntax error, but trying this?

--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -13,7 +13,7 @@ on:
         type: number
 
 jobs:
-  error-check:
+  error_check:
     runs-on: ubuntu-latest
     container:
       image: jhudsl/course_template:main
