--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -13,7 +13,7 @@ on:
         required: true
 
 jobs:
-  error_check:
+  create-report:
     name: Error check
     runs-on: ubuntu-latest
     container:
