--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
     branches: [ main ]
 
 jobs:
+  run-it:
+    runs-on: ubuntu-latest
+    
     steps:
      - name: Checkout
        uses: actions/checkout@v2
