--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       with:
+        repo: jhudsl/OTTR_Template
         fetch-depth: 0
 
     - name: Check spelling
