--- a/action.yml
+++ b/action.yml
@@ -4,14 +4,14 @@ description: "Run OTTR checks for spelling, urls, and quiz formats"
 
 inputs:
   check_type:
-    description: There are three types of reports that can be done and specified: 'spelling', 'urls', or 'quiz_format'.
+    description: "There are three types of reports that can be done and specified: 'spelling', 'urls', or 'quiz_format'."
     required: true
     type: string
   error_min:
-    description: What number of errors should make this check fail?
+    description: "What number of errors should make this check fail?""
     default: 0
     type: number
-    
+
 runs:
   using: 'docker'
   image: 'jhudsl/course_template'
