--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
     required: true
     type: string
   error_min:
-    description: "What number of errors should make this check fail?""
+    description: "What number of errors should make this check fail?"
     default: 0
     type: number
 
