Pass in arguments?

--- a/action.yml
+++ b/action.yml
@@ -15,3 +15,6 @@ inputs:
 runs:
   using: 'docker'
   image: 'jhudsl/ottr-reports'
+  args:
+    - ${{ inputs.check_type }}
+    - ${{ inputs.error_min }}
