Update action.yml to specify docker registry

--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,7 @@ outputs:
 
 runs:
   using: 'docker'
-  image: 'jhudsl/ottr-reports'
+  image: 'docker://jhudsl/ottr-reports'
   args:
     - ${{ inputs.check_type }}
     - ${{ inputs.error_min }}
