--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,18 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Check spelling
+      id: check_spelling
       uses: ./
       with:
         check_type: spelling
         error_min: 3
+
+    - name: Find outputs
+      run: |
+        echo ${{ steps.check_spelling.outputs.report_path }}
+        cat ${{ steps.check_spelling.outputs.report_path }}
+        echo ${{ steps.check_spelling.outputs.error_num}}
+      shell: bash
 
   urls-check:
     runs-on: ubuntu-latest
@@ -27,10 +35,18 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Check URLs
+      id: check_urls
       uses: ./
       with:
         check_type: urls
         error_min: 0
+
+    - name: Find outputs
+      run: |
+        echo ${{ steps.check_urls.outputs.report_path }}
+        cat ${{ steps.check_urls.outputs.report_path }}
+        echo ${{ steps.check_urls.outputs.error_num}}
+      shell: bash
 
   quiz-format:
     runs-on: ubuntu-latest
@@ -39,7 +55,15 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Check quiz formatting
+      id: quiz_format
       uses: ./
       with:
         check_type: quiz_format
         error_min: 0
+
+    - name: Find outputs
+      run: |
+        echo ${{ steps.quiz_format.outputs.report_path }}
+        cat ${{ steps.quiz_format.outputs.report_path }}
+        echo ${{ steps.quiz_format.outputs.error_num}}
+      shell: bash
