--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -24,24 +24,9 @@ jobs:
       image: jhudsl/base_ottr:main
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-        ref: 'preview-${{ github.event.pull_request.number }}'
-
-    - name: Run the check
-      uses: jhudsl/ottr-reports@main
-      id: check_results
-      with:
-        check_type: ${{ inputs.check_type }}
-        error_min: ${{ inputs.error_min }}
-
     - name: Declare report name
       id: setup
       run: |
-        echo ::set-output name=report_name::$(basename ${{ steps.check_results.outputs.report_path }})
-
         if ${{ contains(inputs.check_type, 'spelling') }} ;then
           echo ::set-output name=error_name::'spelling errors'
         elif ${{ contains(inputs.check_type, 'urls') }} ;then
@@ -49,8 +34,6 @@ jobs:
         elif ${{ contains(inputs.check_type, 'quiz_format') }} ;then
           echo ::set-output name=error_name::'quiz formatting errors'
         fi
-
-############################# Handle commenting ################################
 
     - name: Build components of the spell check comment
       id: build-components
@@ -60,6 +43,64 @@ jobs:
         echo ::set-output name=commit_id::$GITHUB_SHA
         echo ::set-output name=error_url::https://raw.githubusercontent.com/$GITHUB_REPOSITORY/$branch_name/${{ steps.check_results.outputs.report_path }}
       shell: bash
+
+    - name: Find Comment
+      uses: peter-evans/find-comment@v1
+      id: fc
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        comment-author: 'github-actions[bot]'
+        body-includes: ${{ steps.setup.outputs.error_name }}
+
+    - name: Status update
+      uses: peter-evans/create-or-update-comment@v1
+      with:
+        comment-id: ${{ steps.fc.outputs.comment-id }}
+        issue-number: ${{ github.event.pull_request.number }}
+        body: |
+          Check: ${{ steps.setup.outputs.error_name }} is currently being re-run
+          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
+        edit-mode: replace
+
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        ref: 'preview-${{ github.event.pull_request.number }}'
+
+    - name: Run the check
+      uses: jhudsl/ottr-reports@main
+      id: check_results
+      continue-on-error: true
+      with:
+        check_type: ${{ inputs.check_type }}
+        error_min: ${{ inputs.error_min }}
+
+    - name: Declare file path
+      id: file-path
+      run: |
+        echo ::set-output name=report_name::$(basename ${{ steps.check_results.outputs.report_path }})
+        echo ::set-output name=time::$(date +'%Y-%m-%d')
+        echo ::set-output name=error_url::https://raw.githubusercontent.com/$GITHUB_REPOSITORY/$branch_name/${{ steps.check_results.outputs.report_path }}
+      shell: bash
+
+    - name: Say check is incomplete
+      if: steps.check_results.outcome == 'failure'
+      uses: peter-evans/create-or-update-comment@v1
+      with:
+        comment-id: ${{ steps.fc.outputs.comment-id }}
+        issue-number: ${{ github.event.pull_request.number }}
+        body: |
+          :warning: Check: ${{ steps.setup.outputs.error_name }} did not fully run! Go to the `Actions` tab to find more info.
+          Post issue to https://github.com/jhudsl/OTTR_Template/issues if this seems incorrect.
+          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
+        edit-mode: replace
+
+    - name: Stop if failure
+      if: steps.check_results.outcome == 'failure'
+      run: exit 1
+      
+############################# Handle commenting ################################
 
     - name: Commit check files to branch
       id: commit
@@ -80,14 +121,6 @@ jobs:
         echo ::set-output name=error_num::$error_num
       shell: bash
 
-    - name: Find Comment
-      uses: peter-evans/find-comment@v1
-      id: fc
-      with:
-        issue-number: ${{ github.event.pull_request.number }}
-        comment-author: 'github-actions[bot]'
-        body-includes: ${{ steps.setup.outputs.error_name }}
-
     - name: There are errors!
       if: ${{ steps.commit.outputs.error_num > inputs.error_min }}
       uses: peter-evans/create-or-update-comment@v1
@@ -97,7 +130,7 @@ jobs:
         body: |
           :warning: ${{ steps.setup.outputs.error_name }} :warning:
           There are ${{ steps.setup.outputs.error_name }} that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Most-common-errors-and-pitfalls).
-          [Download the errors here.](${{ steps.build-components.outputs.error_url }})
+          [Download the errors here.](${{ steps.file-path.outputs.error_url }})
           _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
         edit-mode: replace
 
