--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -53,12 +53,12 @@ jobs:
         body-includes: ${{ steps.setup.outputs.error_name }}
 
     - name: Status update
-      uses: peter-evans/create-or-update-comment@v1
+      uses: peter-evans/create-or-update-comment@v2
       with:
         comment-id: ${{ steps.fc.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
-          Check: ${{ steps.setup.outputs.error_name }} is currently being re-run
+          The check: ${{ steps.setup.outputs.error_name }} is currently being re-run :runner:
           _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
         edit-mode: replace
 
@@ -86,7 +86,7 @@ jobs:
 
     - name: Say check is incomplete
       if: steps.check_results.outcome == 'failure'
-      uses: peter-evans/create-or-update-comment@v1
+      uses: peter-evans/create-or-update-comment@v2
       with:
         comment-id: ${{ steps.fc.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
@@ -99,7 +99,7 @@ jobs:
     - name: Stop if failure
       if: steps.check_results.outcome == 'failure'
       run: exit 1
-      
+
 ############################# Handle commenting ################################
 
     - name: Commit check files to branch
@@ -123,7 +123,7 @@ jobs:
 
     - name: There are errors!
       if: ${{ steps.commit.outputs.error_num > inputs.error_min }}
-      uses: peter-evans/create-or-update-comment@v1
+      uses: peter-evans/create-or-update-comment@v2
       with:
         comment-id: ${{ steps.fc.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
@@ -147,9 +147,9 @@ jobs:
         echo ${{ steps.commit.outputs.error_num }}
       shell: bash
 
-    - name: No errors
+    - name: No errors comment
       if: ${{ steps.commit.outputs.error_num <= inputs.error_min }}
-      uses: peter-evans/create-or-update-comment@v1
+      uses: peter-evans/create-or-update-comment@v2
       with:
         comment-id: ${{ steps.fc.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
