--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -84,11 +84,19 @@ jobs:
         echo ::set-output name=error_url::https://raw.githubusercontent.com/$GITHUB_REPOSITORY/$branch_name/${{ steps.check_results.outputs.report_path }}
       shell: bash
 
+    - name: Find Comment
+      uses: peter-evans/find-comment@v2
+      id: fc2
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        comment-author: 'github-actions[bot]'
+        body-includes: ${{ steps.setup.outputs.error_name }}
+
     - name: Say check is incomplete
       if: steps.check_results.outcome == 'failure'
       uses: peter-evans/create-or-update-comment@v2
       with:
-        comment-id: ${{ steps.fc.outputs.comment-id }}
+        comment-id: ${{ steps.fc2.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
           :warning: Check: ${{ steps.setup.outputs.error_name }} did not fully run! Go to the `Actions` tab to find more info.
@@ -125,7 +133,7 @@ jobs:
       if: ${{ steps.commit.outputs.error_num > inputs.error_min }}
       uses: peter-evans/create-or-update-comment@v2
       with:
-        comment-id: ${{ steps.fc.outputs.comment-id }}
+        comment-id: ${{ steps.fc2.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
           :warning: ${{ steps.setup.outputs.error_name }} :warning:
@@ -151,7 +159,7 @@ jobs:
       if: ${{ steps.commit.outputs.error_num <= inputs.error_min }}
       uses: peter-evans/create-or-update-comment@v2
       with:
-        comment-id: ${{ steps.fc.outputs.comment-id }}
+        comment-id: ${{ steps.fc2.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
           No ${{ steps.setup.outputs.error_name }}! :tada:
