--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -84,7 +84,7 @@ jobs:
         echo ::set-output name=error_url::https://raw.githubusercontent.com/$GITHUB_REPOSITORY/$branch_name/${{ steps.check_results.outputs.report_path }}
       shell: bash
 
-    - name: Find Comment
+    - name: Find Comment Again
       uses: peter-evans/find-comment@v2
       id: fc2
       with:
