branch_name got lost

--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -78,8 +78,9 @@ jobs:
     - name: Declare file path and time
       id: file-path
       run: |
+        branch_name='preview-${{ github.event.pull_request.number }}'
         echo ::set-output name=time::$(date +'%Y-%m-%d')
-        echo ::set-output name=error_url::https://raw.githubusercontent.com/$GITHUB_REPOSITORY/$branch_name/$(basename ${{ steps.check_results.outputs.report_path }})
+        echo ::set-output name=error_url::https://raw.githubusercontent.com/$GITHUB_REPOSITORY/$branch_name/${{ steps.check_results.outputs.report_path }}
       shell: bash
 
     - name: Find Comment Again
