--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -117,11 +117,11 @@ jobs:
         git config --local user.email "itcrtrainingnetwork@gmail.com"
         git config --local user.name "jhudsl-robot"
 
-        git add --force . || echo "No changes to commit"
+        git add . || echo "No changes to commit"
         git commit -m 'Add check file' || echo "No changes to commit"
         git fetch
         git merge origin/${{ github.head_ref }} --allow-unrelated-histories
-        git push --force origin $branch_name || echo "No changes to commit"
+        git push origin $branch_name || echo "No changes to commit"
 
         error_num=$(cat ${{ steps.check_results.outputs.report_path }} | wc -l)
         error_num="$((error_num-1))"
