--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -119,9 +119,8 @@ jobs:
 
         git add ${{ steps.check_results.outputs.report_path }} || echo "No changes to commit"
         git commit -m 'Add check file' || echo "No changes to commit"
-        git fetch
-        git pull 
-        git merge origin/${{ github.head_ref }} --allow-unrelated-histories
+        git pull
+        git merge origin/${{ github.head_ref }} --allow-unrelated-histories --strategy-option ours
         git push origin $branch_name || echo "No changes to commit"
 
         error_num=$(cat ${{ steps.check_results.outputs.report_path }} | wc -l)
