--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -120,8 +120,8 @@ jobs:
         git add ${{ steps.check_results.outputs.report_path }} || echo "No changes to commit"
         git commit -m 'Add check file' || echo "No changes to commit"
         git pull
-        git merge origin/${{ github.head_ref }} --allow-unrelated-histories --strategy-option ours
-        git push origin $branch_name || echo "No changes to commit"
+        git merge origin/${{ github.head_ref }} --allow-unrelated-histories
+        git push origin $branch_name --force || echo "No changes to commit"
 
         error_num=$(cat ${{ steps.check_results.outputs.report_path }} | wc -l)
         error_num="$((error_num-1))"
