--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -117,7 +117,7 @@ jobs:
         git config --local user.email "itcrtrainingnetwork@gmail.com"
         git config --local user.name "jhudsl-robot"
 
-        git add ${{ steps.check_results.outputs.report_path }} || echo "No changes to commit"
+        git add ${{ steps.check_results.outputs.report_path }} --force || echo "No changes to commit"
         git commit -m 'Add check file' || echo "No changes to commit"
         git pull
         git merge origin/${{ github.head_ref }} --allow-unrelated-histories --strategy-option ours
