--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -80,7 +80,7 @@ jobs:
       run: |
         branch_name='preview-${{ github.event.pull_request.number }}'
         echo ::set-output name=time::$(date +'%Y-%m-%d')
-        echo ::set-output name=error_url::https://raw.githubusercontent.com/$GITHUB_REPOSITORY/$branch_name/${{ steps.check_results.outputs.report_path }}
+        echo ::set-output name=error_url::https://github.com/${GITHUB_REPOSITORY}/blob/$branch_name/${{ steps.check_results.outputs.report_path }}
       shell: bash
 
     - name: Find Comment Again
