--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -114,6 +114,7 @@ jobs:
       run: |
         branch_name='preview-${{ github.event.pull_request.number }}'
 
+        git config --system --add safe.directory "$GITHUB_WORKSPACE"
         git config --local user.email "itcrtrainingnetwork@gmail.com"
         git config --local user.name "jhudsl-robot"
 
