--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -137,8 +137,10 @@ jobs:
         issue-number: ${{ github.event.pull_request.number }}
         body: |
           :warning: ${{ steps.setup.outputs.error_name }} :warning:
-          There are ${{ steps.setup.outputs.error_name }} that need to be addressed. [Read this guide for more info](https://github.com/jhudsl/OTTR_Template/wiki/Most-common-errors-and-pitfalls).
-          [Download the errors here.](${{ steps.file-path.outputs.error_url }})
+          There are ${{ steps.setup.outputs.error_name }} that need to be addressed.
+          [See the spelling errors that you need to fix at this link!](${{ steps.file-path.outputs.error_url }}) :exclamation:
+          Add spelling or url errors that aren't errors to `resources/dictionary.txt` or `resources/ignore-urls.txt` respectively.
+          If you are having troubles see [this guide](https://www.ottrproject.org/faqs.html#Most_Common_Errors)
           _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
         edit-mode: replace
 
