--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -29,8 +29,10 @@ jobs:
       run: |
         if ${{ contains(inputs.check_type, 'spelling') }} ;then
           echo "error_name=spelling errors" >> $GITHUB_OUTPUT
+          echo "ignore_file=resources/dictionary.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'urls') }} ;then
           echo "error_name=broken urls" >> $GITHUB_OUTPUT
+          echo "ignore_file=resources/ignore-urls.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'quiz_format') }} ;then
           echo "error_name=quiz formatting errors" >> $GITHUB_OUTPUT
         fi
@@ -139,7 +141,7 @@ jobs:
           :warning: ${{ steps.setup.outputs.error_name }} :warning:
           There are ${{ steps.setup.outputs.error_name }} that need to be addressed.
           [See the spelling errors that you need to fix at this link!](${{ steps.file-path.outputs.error_url }}) :exclamation:
-          Add spelling or url errors that aren't errors to `resources/dictionary.txt` or `resources/ignore-urls.txt` respectively.
+          Add errors that aren't errors to ${{ steps.setup.outputs.ignore_file }} 
           If you are having troubles see [this guide](https://www.ottrproject.org/faqs.html#Most_Common_Errors)
           _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
         edit-mode: replace
