--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -140,8 +140,8 @@ jobs:
         body: |
           :warning: ${{ steps.setup.outputs.error_name }} :warning:
           There are ${{ steps.setup.outputs.error_name }} that need to be addressed.
-          [See the spelling errors that you need to fix at this link!](${{ steps.file-path.outputs.error_url }}) :exclamation:
-          Add errors that aren't errors to ${{ steps.setup.outputs.ignore_file }} 
+          Click here :arrow_right: [for spelling errors!](${{ steps.file-path.outputs.error_url }}) :exclamation:
+          Add errors that aren't errors to the [${{ steps.setup.outputs.ignore_file }}](https://github.com/${GITHUB_REPOSITORY}/${GITHUB_REF#refs/heads/}}/${{ steps.setup.outputs.ignore_file }}) file of this repo. 
           If you are having troubles see [this guide](https://www.ottrproject.org/faqs.html#Most_Common_Errors)
           _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
         edit-mode: replace
