--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -16,7 +16,8 @@ on:
       gh_pat:
         type: string
         required: true
-
+      branch_name:
+        default: ${GITHUB_REF##*/}
 jobs:
   error-check:
     runs-on: ubuntu-latest
@@ -35,17 +36,6 @@ jobs:
           echo "ignore_file=resources/ignore-urls.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'quiz_format') }} ;then
           echo "error_name=quiz formatting errors" >> $GITHUB_OUTPUT
-        fi
-
-    - name: Branch used
-      id: extract_branch
-      run: |
-        if [[ "${GITHUB_EVENT_NAME}" == "push" ]]; then
-          echo "branch=$(echo ${GITHUB_REF##*/})" >> $GITHUB_OUTPUT
-        elif [[ "${GITHUB_EVENT_NAME}" == "pull_request" ]]; then
-          echo "branch=$(echo $GITHUB_BASE_REF)" >> $GITHUB_OUTPUT
-        else
-          echo "branch=INVALID_EVENT_BRANCH_UNKNOWN" >> $GITHUB_OUTPUT
         fi
 
     - name: Build components of the spell check comment
@@ -92,7 +82,7 @@ jobs:
       id: file-path
       run: |
         branch_name='preview-${{ github.event.pull_request.number }}'
-        echo "link_to_ignore_file=https://github.com/${GITHUB_REPOSITORY}/edit/${{ steps.extract_branch.outputs.branch }}/${{ steps.setup.outputs.ignore_file }}" >> $GITHUB_OUTPUT
+        echo "link_to_ignore_file=https://github.com/${GITHUB_REPOSITORY}/edit/${{ inputs.branch_name }}/${{ steps.setup.outputs.ignore_file }}" >> $GITHUB_OUTPUT
         echo "time=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
         echo "error_url=https://github.com/${GITHUB_REPOSITORY}/blob/$branch_name/${{ steps.check_results.outputs.report_path }}" >> $GITHUB_OUTPUT
       shell: bash
