And yet I've learned nothing and still YOLOing

--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -17,6 +17,7 @@ on:
         type: string
         required: true
       branch_name:
+        type: string
         default: ${GITHUB_REF##*/}
 jobs:
   error-check:
