--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -18,7 +18,7 @@ on:
         required: true
       branch_name:
         type: string
-        default: ${GITHUB_REF##*/}
+        default: ${GITHUB_REF#refs/heads/}
 jobs:
   error-check:
     runs-on: ubuntu-latest
