--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -119,9 +119,9 @@ jobs:
       run: |
         branch_name='preview-${{ github.event.pull_request.number }}'
 
-        git config --system --add safe.directory "$GITHUB_WORKSPACE"
-        git config --local user.email "itcrtrainingnetwork@gmail.com"
-        git config --local user.name "jhudsl-robot"
+        git config --global --add safe.directory $GITHUB_WORKSPACE
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
         git add ${{ steps.check_results.outputs.report_path }} --force || echo "No changes to commit"
         git commit -m 'Add check file' || echo "No changes to commit"
