--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -46,7 +46,7 @@ jobs:
       shell: bash
 
     - name: Find Comment
-      uses: peter-evans/find-comment@v2
+      uses: peter-evans/find-comment@v3
       id: fc
       with:
         issue-number: ${{ github.event.pull_request.number }}
@@ -114,12 +114,12 @@ jobs:
       shell: bash
 
     - name: Find Comment Again
-      uses: peter-evans/find-comment@v2
+      uses: peter-evans/find-comment@v3
       id: fc2
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
-        body-includes: The check: ${{ steps.setup.outputs.error_name }}
+        body-includes: The check\: ${{ steps.setup.outputs.error_name }}
 
     - name: Say check is incomplete
       if: steps.check_results.outcome == 'failure'
