--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -119,7 +119,7 @@ jobs:
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
-        body-includes: The check\: ${{ steps.setup.outputs.error_name }}
+        body-includes: 'The check\: ${{ steps.setup.outputs.error_name }}'
 
     - name: Say check is incomplete
       if: steps.check_results.outcome == 'failure'
