--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -121,7 +121,7 @@ jobs:
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
-        body-includes: 'The check: ${{ steps.setup.outputs.error_name }}'
+        body-includes: ${{ steps.setup.outputs.error_name }}' is currently being re-run'
         direction: first
         nth: 1
         
