--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -25,13 +25,13 @@ jobs:
 
     steps:
     - name: Declare report name
-      id: setup
+      id: setup1
       run: |
         if ${{ contains(inputs.check_type, 'spelling') }} ;then
           echo "error_name=spelling error" >> $GITHUB_OUTPUT
           echo "ignore_file=resources/dictionary.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'urls') }} ;then
-          echo "error_name=broken urls error" >> $GITHUB_OUTPUT
+          echo "error_name=broken url error" >> $GITHUB_OUTPUT
           echo "ignore_file=resources/ignore-urls.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'quiz_format') }} ;then
           echo "error_name=quiz formatting error" >> $GITHUB_OUTPUT
@@ -50,7 +50,7 @@ jobs:
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
-        body-includes: ${{ steps.setup.outputs.error_name }}
+        body-includes: ${{ steps.setup1.outputs.error_name }}
 
     - name: Status update
       uses: peter-evans/create-or-update-comment@v2
@@ -58,7 +58,7 @@ jobs:
         comment-id: ${{ steps.fc1.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
-          The check: ${{ steps.setup.outputs.error_name }} is currently being re-run :runner:
+          The check: ${{ steps.setup1.outputs.error_name }} is currently being re-run :runner:
           _Comment updated at ${{ steps.build-components1.outputs.time }} with changes from ${{ steps.build-components1.outputs.commit_id }}_
         edit-mode: replace
         
@@ -69,13 +69,13 @@ jobs:
 
     steps:
     - name: Declare report name
-      id: setup
+      id: setup2
       run: |
         if ${{ contains(inputs.check_type, 'spelling') }} ;then
           echo "error_name=spelling error" >> $GITHUB_OUTPUT
           echo "ignore_file=resources/dictionary.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'urls') }} ;then
-          echo "error_name=broken urls error" >> $GITHUB_OUTPUT
+          echo "error_name=broken url error" >> $GITHUB_OUTPUT
           echo "ignore_file=resources/ignore-urls.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'quiz_format') }} ;then
           echo "error_name=quiz formatting error" >> $GITHUB_OUTPUT
@@ -118,7 +118,7 @@ jobs:
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
-        body-includes: ${{ steps.setup.outputs.error_name }}
+        body-includes: ${{ steps.setup2.outputs.error_name }}
 
     - name: Say check is incomplete
       if: steps.check_results.outcome == 'failure'
@@ -127,7 +127,7 @@ jobs:
         comment-id: ${{ steps.fc2.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
-          :warning: Check: ${{ steps.setup.outputs.error_name }} did not fully run! Go to the `Actions` tab to find more info.
+          :warning: Check: ${{ steps.setup2.outputs.error_name }} did not fully run! Go to the `Actions` tab to find more info.
           Post issue to https://github.com/jhudsl/OTTR_Template/issues if this seems incorrect.
           _Comment updated at ${{ steps.build-components2.outputs.time }} with changes from ${{ steps.build-components2.outputs.commit_id }}_
         edit-mode: replace
@@ -165,12 +165,12 @@ jobs:
         comment-id: ${{ steps.fc2.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
-          :warning: ${{ steps.setup.outputs.error_name }} :warning:
-          There are ${{ steps.setup.outputs.error_name }} that need to be addressed.
-          Click here :arrow_right: [for ${{ steps.setup.outputs.error_name }}s!](${{ steps.file-path.outputs.error_url }}) :exclamation:
-          Add errors that aren't errors to the [${{ steps.setup.outputs.ignore_file }}](${{ steps.file-path.outputs.link_to_ignore_file }}) file of this repo.
+          :warning: ${{ steps.setup2.outputs.error_name }} :warning:
+          There are ${{ steps.setup2.outputs.error_name }} that need to be addressed.
+          Click here :arrow_right: [for ${{ steps.setup2.outputs.error_name }}s!](${{ steps.file-path.outputs.error_url }}) :exclamation:
+          Add errors that aren't errors to the [${{ steps.setup2.outputs.ignore_file }}](${{ steps.file-path.outputs.link_to_ignore_file }}) file of this repo.
           If you are having troubles see [this guide](https://www.ottrproject.org/faqs.html#Most_Common_Errors)
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
+          _Comment updated at ${{ steps.build-components2.outputs.time }} with changes from ${{ steps.build-components2.outputs.commit_id }}_
         edit-mode: replace
 
     - name: Fail if too many errors
@@ -194,5 +194,5 @@ jobs:
         issue-number: ${{ github.event.pull_request.number }}
         body: |
           No ${{ steps.setup.outputs.error_name }}s! :tada:
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
+          _Comment updated at ${{ steps.build-components2.outputs.time }} with changes from ${{ steps.build-components2.outputs.commit_id }}_
         edit-mode: replace
